--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "i": "^0.3.6",
     "moment": "^2.19.0",
     "npm": "^5.4.2",
-    "vue": "^2.4.4"
+    "vue": "^2.4.4",
+    "vue-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
